[package]
name = "cni-consul-ipam"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
cidr = { version = "0.1.1", features = ['serde'] }
ipc-channel = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "consul"
path = "src/main.rs"
